# AngularApp/src/app/swagger-proxy/models/input-ledger-transaction-dto.ts
@@ -1,4 +1,6 @@
 /* tslint:disable */
+import { LedgerTransactionTypeEnum } from './ledger-transaction-type-enum';
 export interface InputLedgerTransactionDto {
   amount: number;
+  transactionType: LedgerTransactionTypeEnum;
 }
